Hover fix and announcements/trending layout and collapse

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,42 @@ html {
     div .content {
         width: 100%;
     }
+
+    .content > .main {
+        width: 100%;
+        flex-wrap: wrap;
+        overflow-y: scroll;
+    }
+
+    .main > .important {
+        width: 100%;
+    }
+
+    .main > .projects {
+        width: 100%;
+    }
 }
+
+@media screen and (max-width: 950px) {
+    div .content {
+        width: 100%;
+    }
+
+    .content > .main {
+        width: 100%;
+        flex-wrap: wrap;
+        overflow-y: scroll;
+    }
+
+    .main > .important {
+        width: 100%;
+    }
+
+    .main > .projects {
+        width: 100%;
+    }
+}
+
 
 @media screen and (min-width: 751px) {
     .container > .sidebar-collapse {
@@ -87,7 +122,7 @@ html {
 
 @media (hover: none) {
     .container > .sidebar-collapse:hover {
-        background-color: inherit;
+        background-color: var(--purple);
     }
 }
 
@@ -143,15 +178,14 @@ a {
 .main {
     display: flex;
     height: 100%;
-
 }
 
 .projects {
     height: 80vh;
-    width: 66%;
+    width: 75%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: 300px;
+    grid-template-rows: 20px;
     grid-auto-rows: 300px;
     gap: 50px;
     justify-content: center;
@@ -181,6 +215,32 @@ a {
 }
 
 .important {
-    width: 33%;
+    width: 25%;
+    min-width: 250px;
     background-color: var(--gray);
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20px 300px 20px 300px;
+    gap: 50px;
+    padding: 3ch;
+    margin: 0;
+}
+
+.your-projects {
+    grid-column: 1/-1;
+}
+
+
+.announcements {
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: var(--white);
+    background-color: var(--white);
+}
+
+.trending {
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: var(--white);
+    background-color: var(--white);
 }
